@startuml
class ResultActivity {
- TextView scoreTextView
}

class MainActivity {
+ {static} String NOTIFICATION_CHANNEL_ID
- {static} String default_notification_channel_id
- TextView sequenceDisplay
- Button startButton
- Button redButton
- Button greenButton
- Button blueButton
- Button whiteButton
- List<String> sequence
- int sequenceIndex
- int playerIndex
- TextToSpeech tts
~ Random random
- {static} List<String> COLORS
- ActivityResultLauncher<String> requestPermissionLauncher
}

class MyBroadcastReceiver {
+ {static} String NOTIFICATION_ID
+ {static} String NOTIFICATION
}



AppCompatActivity <|-- ResultActivity
AppCompatActivity <|-- MainActivity
BroadcastReceiver <|-- MyBroadcastReceiver
@enduml